[package]
name = "skyward"
version = "0.1.1"
edition = "2021"
license = "MIT"
description = "A fast, extensive game engine written in Rust, utilizing glium."
repository = "https://github.com/therealnv6/skyward"
keywords = ["game", "engine", "games", "gameengine", "game engine", "skyward", "opengl"]
crate-type = ["lib"]

[workspace]
members = [
    "render_gl",
    "ecs_macro",
    "test_gl",
    "ecs",
]

[[example]]
name = "teapot"
path = "examples/teapot_test.rs"

[package.metadata.example.teapot]
name = "Teapot Model"
description = "A mere teapot render."
hidden = true